# deafinition

./: CMakeLists.txt  README.md  livemictest.py
source/: Main.cpp  MainComponent.cpp  MainComponent.h  test.py
